WebAppUT/WebAppCoreL/rmd.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: redis-master
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        role: master
        tier: backend
    spec:
      containers:
      - name: master
        image: redis  # or just image: redis
        resources:
          requests:
            cpu: "200m"
            memory: "200Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: /redis-master-data-alpha
          name: data-alpha
      volumes:
      - name: data-alpha
        persistentVolumeClaim:
           claimName: azure-managed-disk
