WebAppUT/WebAppCoreL/aks-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-aks-service
  labels:
    run: my-aks
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: my-aks
  type: LoadBalancer
