WebAppUT/WebAppCoreL/locl-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: locl-service
  labels:
    run: locl
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: locl
  type: NodePort
