WebAppUT/WebAppCoreL/locw-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: locw-service
  labels:
    run: locw
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: 80
  selector:
    run: locw
  type: LoadBalancer
