WebAppUT/WebAppCoreL/qwe-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: qwe-service
  labels:
    run: qwe
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: 80
  selector:
    run: qwe
  type: LoadBalancer
