WebAppUT/WebAppCoreL/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  backend:
    serviceName: redis-master
    servicePort: 6379
